Alignment fix

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -22,6 +22,9 @@ h1 img {
 
 .no-overflow {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .red {
